--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,10 +21,8 @@ spring:
         show_sql: true
         dialect: org.hibernate.dialect.H2Dialect
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
 logging:
   level:
     org.hibernate.SQL: debug
     org.hibernate.type: trace
-
-
